@@ -11,9 +11,10 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>3.1.2.RELEASE</spring.version>
+        <spring.version>3.2.0.RELEASE</spring.version>
         <hibernate.version>4.2.0.Final</hibernate.version>
         <hibernateEM.version>3.3.2.GA</hibernateEM.version>
+        <tomcat.port>8080</tomcat.port>
     </properties>
 
     <repositories>
@@ -26,6 +27,14 @@
         <repository>
             <id>http://maven.xwiki.org</id>
             <url>http://maven.xwiki.org/externals</url>
+        </repository>
+        <repository>
+            <id>http://repo1.maven.org/maven2/org/seleniumhq/selenium</id>
+            <url>http://repo1.maven.org/maven2/org/seleniumhq/selenium</url>
+        </repository>
+        <repository>
+            <id>http://repo.jenkins-ci.org/releases/</id>
+            <url>http://repo.jenkins-ci.org/releases/</url>
         </repository>
     </repositories>
 
@@ -161,18 +170,19 @@
             <scope>test</scope>
             <version>2.3.1</version>
         </dependency>
-		<dependency>
-		    <groupId>org.seleniumhq.selenium</groupId>
-		    <artifactId>selenium-htmlunit-driver</artifactId>
-		    <version>2.3.1</version>
-		    <scope>test</scope>
-		</dependency>        
+<!--  		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+  		    <artifactId>selenium-server-standalone</artifactId>
+			<version>2.35.0</version>
+		</dependency>  -->                      		     
         <!-- test -->
 
 
     </dependencies>
     <build>
         <finalName>loan</finalName>
+        
+        
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -194,30 +204,28 @@
                 </executions>
             </plugin>
             
- <!--            <plugin>
+   
+            
+            
+            
+
+              <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <groups>eu.fourFinance.testsuites.categories.UnitTests</groups>
                 </configuration>
-            </plugin>            
+            </plugin>      
             
+            
+            
+  
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>-XX:MaxPermSize=512M</argLine>
-                    <includes>
-                        <include>eu/fourFinance/testsuites/IntegrationTestSuite.java</include>
-                    </includes>
-                </configuration>
-            </plugin>
-                                     -->
-<!--             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat6-maven-plugin</artifactId>
                 <version>2.0</version>
             </plugin>
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -230,43 +238,31 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.13</version>
             </plugin>
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>2.6</version>
             </plugin>
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.0</version>
             </plugin>
-             -->
              
-<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-surefire-plugin</artifactId>
-    <executions>
-    <execution>
-        <id>run-webtests</id>
-        <phase>integration-test</phase>
-        <goals>
-        <goal>test</goal>
-        </goals>
-        <configuration>
-        <includes>
-            <include>**/*Webtest.java</include>
-        </includes>
-        <skip>false</skip>
-        </configuration>
-    </execution>
-    </executions>
-</plugin>             
-             
+            <plugin>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>8.1.10.v20130312</version>
+            </plugin>
+
              
              
         </plugins>
@@ -274,31 +270,37 @@
     </build>
 
     <profiles>
-    <!-- 
-    
+ 
+  
         <profile>
             <id>integration-test</id>
             <build>
                 <plugins>
+
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
                         <executions>
                             <execution>
-                                <id>integration-tests</id>
-                                <phase>integration-test</phase>
+                                <id>aa-tests</id>
+                                <phase>pre-integration-test</phase>
                                 <goals>
-                                    <goal>test</goal>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
                                 </goals>
                                 <configuration>
                                     <argLine>-XX:MaxPermSize=512M</argLine>
-                                    <includes>
-                                        <include>eu/fourFinance/testsuites/IntegrationTestSuite.java</include>
-                                    </includes>
+                                    <groups>eu.fourFinance.testsuites.categories.IntegrationTests</groups>
                                 </configuration>
                             </execution>
                         </executions>
+                         <configuration>
+                            <includes>
+                                <include>**/*.class</include>
+                            </includes>
+                        </configuration> 
                     </plugin>
+                    
                 </plugins>
             </build>
         </profile>
@@ -328,7 +330,7 @@
                                             <artifactId>debts-webapp</artifactId>
                                             <version>0.0.1-SNAPSHOT</version>
                                             <type>war</type>
-                                            <destFileName>debts-webapp.war</destFileName>
+                                            <destFileName>loan.war</destFileName>
                                         </artifactItem>
                                     </artifactItems>
                                 </configuration>
@@ -350,18 +352,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
                         <executions>
-                            <execution>
-                                <id>data-load-tests</id>
-                                <phase>pre-integration-test</phase>
-                                <goals>
-                                    <goal>integration-test</goal>
-                                    <goal>verify</goal>
-                                </goals>
-                                <configuration>
-                                    <argLine>-XX:MaxPermSize=512M</argLine>
-                                    <groups>lt.s.testutil.categories.DataLoadTests</groups>
-                                </configuration>
-                            </execution>
+
                             <execution>
                                 <id>run-webtests</id>
                                 <goals>
@@ -371,14 +362,14 @@
                                 <configuration>
                                     <argLine>-XX:MaxPermSize=512M</argLine>
                                     <includes>
-                                        <include>eu/fourFinance/testsuites/WebIntegrationTestSuite.java</include>
+                                        <include>eu/fourFinance/testsuites/WebTestSuite.java</include>
                                     </includes>
                                 </configuration>
                             </execution>
                         </executions>
                         <configuration>
                             <systemPropertyVariables>
-                                <log4j.configuration>${project.build.directory}/test-classes/conf/failsafe-log4j.xml</log4j.configuration>
+                               <!--  <log4j.configuration>${project.build.directory}/test-classes/conf/failsafe-log4j.xml</log4j.configuration> -->
                                 <tomcat.port>${tomcat.port}</tomcat.port>
                             </systemPropertyVariables>
                             <includes>
@@ -397,22 +388,20 @@
                                 </goals>
                                 <phase>pre-integration-test</phase>
                                 <configuration>
-                                    http port
+                                    <!-- http port -->
                                     <port>${tomcat.port}</port>
-                                    allow Maven to continue
+                                    <!-- allow Maven to continue -->
                                     <fork>true</fork>
                                     <charset>UTF-8</charset>
-                                    application path always starts with 
-                                        /
+                                    <!-- application path always starts with 
+                                        / -->
                                     <path>/avilys</path>
-                                    context file to disable session 
-                                        persitence
-                                    <contextFile>${project.build.directory}/test-classes/conf/context.xml</contextFile>
-                                    allow plugin to work in non WAR 
-                                        projects
+                                    <!-- context file to disable session persitence -->
+                                    <!-- <contextFile>${project.build.directory}/test-classes/conf/context.xml</contextFile> -->
+                                    <!-- allow plugin to work in non WAR   projects -->
                                     <ignorePackaging>true</ignorePackaging>
-                                    default WAR to load
-                                    <warDirectory>${project.build.directory}/dependency/avilys.war</warDirectory>
+                                    <!-- default WAR to load -->
+                                    <warDirectory>${project.build.directory}/dependency/loan.war</warDirectory>
                                 </configuration>
                             </execution>
                             <execution>
@@ -430,8 +419,11 @@
                 </plugins>
             </build>
         </profile>
-        
-         -->
+
+
+
+
+
         
     </profiles>
 
